# chat_help_bot

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test_prompt.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_default_style.py  003_add_profile_fields.py  004_add_referral_fields.py  005_add_screenshots_balance.py  006_add_payments_table.py  007_add_user_email.py
app/: config.py  main.py  tariffs_config.py
app/ai/: client.py  prompt_builder.py  response_parser.py
app/ai/prompts/: analyzer.py  anti_ignor.py  first_message.py  flirt.py  modifiers.py  photo_pickup.py  profile_review.py  reply_message.py  safety.py
app/bot/: setup.py
app/bot/handlers/: analyzer.py  anti_ignor.py  cancel.py  common.py  consent.py  first_message.py  flirt.py  help.py  menu.py  modifier.py  onboarding.py  payment.py  photo_pickup.py  profile_review.py  reply_message.py  settings_handler.py  start.py
app/bot/keyboards/: consent.py  menu.py  onboarding.py  payment.py  scenarios.py  settings.py  styles.py
app/bot/middlewares/: db_middleware.py  error_middleware.py  user_middleware.py
app/bot/states/: onboarding.py  scenarios.py  settings.py
app/db/: session.py
app/proxy/: manager.py
app/services/: access_service.py  ai_service.py  consent_service.py  image_service.py  payment_service.py  yookassa_service.py
tests/: conftest.py  test_ai_request.py  test_consent.py  test_onboarding.py  test_payment.py  test_proxy.py  test_response_parser.py  test_trial.py
(+12 files in other folders)
